--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,18 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Visual Studio
+*.exe
+*.ilk
+*.cache
+*.obj
+*.lib
+*.log
+*.tlog
+*.idb
+*.pdb
+*.opensdf
+*.sdf
+*.suo
+*.user
