--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
     project:
       name: "giacobenin/pqs"
       description: "Priority Queues"
+    notification_email: giacomo@cise.ufl.edu
     build_command_prepend: "cd make"
     build_command: "make"
     branch_pattern: master
