--- a/vs/graphgen.vcxproj.filters
+++ b/vs/graphgen.vcxproj.filters
@@ -7,7 +7,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\ssp.cpp">
+    <ClCompile Include="..\graphgen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
